--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "homepage": "https://Aleksey0808.github.io/goit-react-hw-02-phonebook/",
   "dependencies": {
+    "@emotion/css": "^11.10.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.1",
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
